--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  collection: ^1.18.0
+  equatable: ^2.0.5
   # path: ^1.8.0
 
 dev_dependencies:
