--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  args: ^2.4.2
   collection: ^1.18.0
   equatable: ^2.0.5
   # path: ^1.8.0
